  of SNMP engine inner workings. This is thought to be a generic
  framework for viewing (and modifying) various internal states
  of pysnmp engine. Previously introduced non-standard APIs (like
  getting peer's transport endpoint which is not suggested in RFCs)
  will be gradually migrated to this new framework.
- Initial support for the asyncio & Trollius frameworks and
  coroutines-based SNMP Applications interfaces added.
- The asyncore-based transport subsystem extended to support POSIX
  sendmsg()/recvmsg() based socket communication what could be used,
  among other things, in the context of a transparent SNMP proxy 
  application. Technically, the following features were brought
  into pysnmp with this update:
  * Sending SNMP packets from a non-local IP address
  * Receiving IP packets for non-local IP addresses
  * Responding to SNMP requests from exactly the same IP address
    the query was sent to. This proves to be useful when listening
    on both primary and secondary IP interfaces.
- Internal oneliner apps configuration cache moved from respective
  apps objects to [a singular] snmpEngine object. That would allow
  for better cache reuse and allow for a single app working with
  many snmpEngine instances.
- Legacy interfaces and APIs dropped in new oneliner AsyncCommandGenerator
  and AsyncNotificationOriginator classes (notice 'c' in Async). Original
  AsynCommandGenerator and AsynNotificationOriginator implementations
  rebuilt on top of these new optimized versions keeping all the legacy
  for compatibility reasons. These classes no more keep references to 
  SnmpEngine what makes them reusable with many SnmpEngine class instances.
- Oneliner GETBULK Command Generator now strips possible excessive OIDs
  off the bottom of returned var-binds table.
- Built-in debugging is now based on Python logging module.
- Example on a single Transport Dispatcher use with multiple SnmpEngine's